--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,6 +12,8 @@ RUN apt-get update && \
        git \
        gh \
        gpg \
+       openssh-client \
+       ca-certificates \
        #use gcc-12 to avoid problems of default gcc-11 in FlexRIC
        gdb \
        rr \
@@ -24,6 +26,9 @@ USER ubuntu
 # install astral uv
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/home/ubuntu/.local/bin:$PATH"
+
+# check nvidia-smi
+RUN echo $(nvidia-smi) > ~/nvidia-smi.out.txt
 
 # Set working directory
 WORKDIR /workspace
