--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Sionna Dev Container",
+    "name": "Dev Container",
     "build": {
         "dockerfile": "./Dockerfile"
     },
@@ -16,12 +16,15 @@
         }
     },
     "forwardPorts": [],
-    "remoteUser": "vscode",
+    "remoteUser": "ubuntu",
     "mounts": [
         "source=${env:HOME}/.gnupg,target=/home/vscode/.gnupg,type=bind,consistency=cached"
     ],
     "runArgs": [
-        "--env", "GPG_TTY=${containerEnv:GPG_TTY}"
+        "--env",
+        "GPG_TTY=${containerEnv:GPG_TTY}",
+        "--gpus",
+        "all"
     ],
     "postCreateCommand": "/bin/sh .devcontainer/postCreateScript.sh"
 }
