--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyterlab>=4.4.9",
     "matplotlib>=3.10.7",
-    "numpy>=2.3.3",
+    "numpy>=1.26.4",
     "pandas>=2.3.3",
-    "torch>=2.8.0",
+    "sionna>=1.2.0",
 ]
