--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,6 +28,9 @@
     "mounts": [
         "source=${env:HOME}/.gnupg,target=/home/vscode/.gnupg,type=bind,consistency=cached"
     ],
+    "containerEnv": {
+        "NVIDIA_DRIVER_CAPABILITIES": "all"
+    },
     "runArgs": [
         "--env",
         "GPG_TTY=${containerEnv:GPG_TTY}",
